[project]
name = "anychat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.99.1",
    "streamlit>=1.48.0",
    "requests>=2.31.0",
    "speechrecognition>=3.10.0",
    "pyaudio>=0.2.11"
]
